# python-kis

./: .gitignore  LICENCE  MANIFEST.in  README.md  example.ipynb  flow.py  flow2.py  pyproject.toml  readme.md  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml  기능-요청.md  버그-제보.md  질문하기.md
.github/workflows/: publish.yml
docs/: codebase_analysis_report.md  pykis_architecture_deep_dive.md
docs/ko/: codebase_analysis_report_ko.md  pykis_architecture_deep_dive_ko.md
pykis/: __env__.py  __init__.py  account.py  exceptions.py  g.py  kis.py  logging.py  timezone.py  types.py
pykis/adapter/: websocket.py
pykis/adapter/account/: balance.py  order.py
pykis/adapter/account_product/: order.py  order_modify.py
pykis/adapter/product/: quote.py
pykis/adapter/websocket/: execution.py  price.py
pykis/api/account/: balance.py  daily_order.py  order.py  order_modify.py  order_profit.py  orderable_amount.py  pending_order.py
pykis/api/auth/: __init__.py  token.py  websocket.py
pykis/api/base/: account.py  account_product.py  exchange.py  market.py  product.py
pykis/api/stock/: asking_price.py  chart.py  daily_chart.py  day_chart.py  exchange.py  info.py  market.py  order_book.py  quote.py  trading_hours.py
pykis/api/stock/base/: account.py  account_product.py  product.py
pykis/api/websocket/: __init__.py  asking_price.py  order_book.py  order_execution.py  price.py
pykis/client/: __init__.py  account.py  appkey.py  auth.py  cache.py  client.py  exception.py  exceptions.py  form.py  messaging.py  object.py  page.py  token.py  websocket.py
pykis/client/responses/: __init__.py  auth.py  dynamic.py  response.py
pykis/event/: __init__.py  eventhandler.py  handler.py  subscription.py
pykis/event/filters/: __init__.py  order.py  product.py  subscription.py
pykis/event/websocket/: subscription.py
pykis/market/: __init__.py  base.py  client.py  db.py  kosdaq.py  kospi.py  kstock.py  markets.py  sector.py
pykis/responses/: __init__.py  dynamic.py  exception.py  exceptions.py  response.py  types.py  websocket.py
pykis/rtclient/: __init__.py  encrypt.py  event.py  messaging.py  rtclient.py
pykis/rtclient/responses/: __init__.py  rt_asking_price.py  rt_conclude.py  rt_price.py
pykis/scope/: __init__.py  _import.py  account.py  base.py  stock.py
pykis/scope/account/: __init__.py  account.py
pykis/scope/account/api/: __init__.py  _import.py  amount.py  balance.py  daily_order.py  order_cash.py  order_revise.py  order_revise_us.py  order_us.py  overseas_order.py  overseas_order_revise.py  overseas_revisable_order.py  realized_profit.py  revisable_order.py
pykis/scope/account/api/response/: __init__.py  amount.py  balance.py  daily_order.py  order_cash.py  order_us.py  overseas_order.py  overseas_revisable_order.py  realized_profit.py  revisable_order.py
pykis/scope/base/: account.py  account_product.py  market.py  product.py  scope.py
pykis/scope/market/: __init__.py
pykis/scope/market/api/: __init__.py  _import.py  holiday.py  info.py
pykis/scope/market/api/response/: __init__.py  holiday.py  info.py
pykis/scope/sector/api/: period_sector_price.py
pykis/scope/stock/: __init__.py  info_stock.py  stock.py
pykis/scope/stock/api/: __init__.py  _import.py  asking_price.py  conclude.py  day_conclude.py  elw_price.py  investor.py  member.py  overtime_conclude.py  overtime_price_daily.py  period_price.py  price.py  price_daily.py
pykis/scope/stock/api/response/: __init__.py  asking_price.py  conclude.py  day_conclude.py  elw_price.py  investor.py  (+5 more)
pykis/utils/: cache.py  diagnosis.py  math.py  params.py  rate_limit.py  reference.py  repr.py  thread_safe.py  timex.py  timezone.py  typing.py  workspace.py
pykis/utlis/: __init__.py  market_open.py
pykis/utlis/krx/: __init__.py  base.py  fluct_rank.py  limit_stock.py  rank.py
tests/: .env.sample  account.py  detail.py  env.py  holiday.py  krx_test.py  main.py  market_open.py  mutli_object.py  order.py  order_us.py  order_us2.py  realtime_price.py  search.py  stock_info.py
tests/unit/: test_account_balance.py  test_product_quote.py
