[tool.poetry]
name = "python-kis"
version = "0.0.0"
description = "파이썬 한국투자증권 REST 기반 Trading API 라이브러리"
authors = ["Soju06 <qlskssk@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = [
    "python",
    "client",
    "library",
    "trading",
    "websocket",
    "realtime",
    "investing",
    "korean",
    "investment",
    "autotrading",
    "koreainvestment"
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed"
]
packages = [{include = "pykis"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Soju06/python-kis/issues"
"Documentation" = "https://github.com/Soju06/python-kis/wiki/Tutorial"
"Source Code" = "https://github.com/Soju06/python-kis"

[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2.32.3"
websocket-client = ">=1.8.0"
cryptography = ">=43.0.0"
colorlog = ">=6.8.2"
typing-extensions = "^4.14.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)(-(?P<stage>[a-zA-Z]+)\\.(?P<revision>\\d+))?$"
format-jinja = """
{%- if distance == 0 -%}
    {{ serialize_pep440(base, stage, revision) }}
{%- else -%}
    {{ serialize_pep440(base, stage, revision, dev=distance, metadata=[commit]) }}
{%- endif -%}
"""
metadata = true

[tool.poetry-dynamic-versioning.substitution]
folders = [
    { path = "pykis", files = ["__env__.py"] }
]
patterns = [
    "(VERSION = \")[^\"]*(\").*"
]

[build-system]
requires = ["poetry-core>=1.8.0", "poetry-dynamic-versioning>=1.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
